fix: improve height on ios

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 
 html, body {
     width: 100%;
-    min-height: 100%;
+    min-height: 100dvh;
 }
 
 body {
@@ -35,7 +35,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: 100dvh;
     padding: 2rem 1rem;
     text-align: center;
 }
